<?xml version="1.0" encoding="utf-8"?>

<!--The following code is the property and sole work of Mike Palarz, a student at Udacity-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_medium">

    <android.support.constraint.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <!--Background view to add some polish to the movie title-->
        <View
            android:id="@+id/title_background"
            android:layout_width="@dimen/movie_title_background_width"
            android:layout_height="@dimen/movie_title_background_height"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="@dimen/margin_large"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fl_movie_poster"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0"/>

        <!--CheckBox, which is used as the favorite button; this has been adjusted to display a star-->
        <CheckBox
            android:id="@+id/cb_favorite_star"
            android:buttonTint="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/statelist_favorite_button"
            android:layout_marginRight="@dimen/margin_medium"
            app:layout_constraintRight_toRightOf="@+id/title_background"
            app:layout_constraintTop_toTopOf="@+id/title_background"
            android:layout_marginTop="@dimen/margin_medium"
            android:onClick="onFavoriteClicked"
            android:layout_marginEnd="@dimen/margin_medium"/>

        <!--Movie title-->
        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_height="wrap_content"
            android:layout_width="360dp"
            android:text="N/A"
            style="@style/MovieHeader"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_background"
            app:layout_constraintBottom_toBottomOf="@+id/title_background"/>

        <!--Contains both the movie poster and the play button which overlays on top of it-->
        <FrameLayout
            android:id="@+id/fl_movie_poster"
            android:layout_width="@dimen/movie_poster_width"
            android:layout_height="@dimen/movie_poster_height"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/separator"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_background"
            android:layout_marginBottom="@dimen/margin_large">

            <!--Movie poster-->
            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/MoviePoster"/>

            <ImageView
                android:id="@+id/iv_play_button"
                android:layout_width="@dimen/movie_trailer_play_button"
                android:layout_height="@dimen/movie_trailer_play_button"
                android:background="@drawable/play_button_48dp"
                android:layout_gravity="center"
                android:alpha="0.5"/>

        </FrameLayout>

        <!--Runtime label-->
        <TextView
            android:id="@+id/tv_movie_runtime_label"
            android:text="@string/movie_details_header_runtime"
            style="@style/MovieStats"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_extra_large"
            app:layout_constraintLeft_toRightOf="@+id/fl_movie_poster"
            app:layout_constraintBottom_toTopOf="@+id/tv_movie_release_date"
            android:layout_marginStart="@dimen/margin_medium"/>

        <!--Movie runtime-->
        <TextView
            android:id="@+id/tv_movie_runtime"
            android:text="N/A"
            style="@style/MovieStats"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            app:layout_constraintLeft_toRightOf="@+id/tv_movie_runtime_label"
            app:layout_constraintBottom_toBottomOf="@+id/tv_movie_runtime_label"/>

        <!--Release date label-->
        <TextView
            android:id="@+id/tv_movie_release_date_label"
            android:text="@string/movie_details_header_release_date"
            style="@style/MovieStats"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_movie_release_date"
            app:layout_constraintLeft_toRightOf="@+id/fl_movie_poster"/>

        <!--Movie release date-->
        <TextView
            android:id="@+id/tv_movie_release_date"
            android:text="N/A"
            style="@style/MovieStats"
            android:layout_height="40dp"
            android:layout_width="120dp"
            android:layout_marginLeft="@dimen/margin_medium"
            app:layout_constraintBottom_toBottomOf="@+id/fl_movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/title_background"
            app:layout_constraintRight_toRightOf="parent"
            android:textAlignment="textStart"
            android:gravity="start"/>

        <!--Vote label-->
        <TextView
            android:id="@+id/tv_movie_vote_results_label"
            android:text="@string/movie_details_header_vote"
            style="@style/MovieStats"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/margin_medium"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/fl_movie_poster"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_release_date"/>

        <!--Vote average and vote counts-->
        <TextView
            android:id="@+id/tv_movie_vote_results"
            style="@style/MovieStats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:text="N/A"
            app:layout_constraintLeft_toRightOf="@+id/tv_movie_vote_results_label"
            android:layout_marginLeft="@dimen/margin_medium"
            app:layout_constraintBottom_toBottomOf="@+id/tv_movie_vote_results_label"
            />

        <!--Horizontal separator-->
        <View
            android:id="@+id/separator"
            style="@style/HorizontalDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fl_movie_poster"/>

        <!--Overview heading-->
        <TextView
            android:id="@+id/tv_overview_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_details_header_overview"
            style="@style/MovieHeader"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator"/>

        <!--Movie overview-->
        <TextView
            android:id="@+id/tv_movie_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/movie_overview_text_size"
            android:text="N/A"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_heading"
            app:layout_constraintRight_toRightOf="@+id/tv_overview_heading"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/tv_overview_heading"/>

        <!--Horizontal separator-->
        <View
            android:id="@+id/separator2"
            style="@style/HorizontalDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview"/>

        <!--Reviews label-->
        <TextView
            android:id="@+id/tv_reviews_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_details_header_reviews"
            style="@style/MovieHeader"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator2"/>

        <!--A LinearLayout is used for both reviews to make them easier to click on-->
        <!--Clicking on either review launches an implicit intent to see the full review-->
        <LinearLayout
            android:id="@+id/ll_review1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews_heading"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <!--Review 1 heading-->
            <TextView
                android:id="@+id/tv_review1_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_details_header_review1"
                style="@style/MovieStats"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_reviews_heading"
                android:gravity="left"/>

            <!--The a preview of the first review-->
            <TextView
                android:id="@+id/tv_review1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:ellipsize="end"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_review1_heading"/>

            <!--A hint for the user to view the full review-->
            <TextView
                android:id="@+id/tv_review1_click_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/movie_details_header_review_read_more"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_review1"/>

        </LinearLayout>

        <!--A LinearLayout for the second review-->
        <LinearLayout
            android:id="@+id/ll_review2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/ll_review1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <!--Review 2 heading-->
            <TextView
                android:id="@+id/tv_review2_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_details_header_review2"
                style="@style/MovieStats"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_review1_click_hint"
                android:gravity="left"/>

            <!--The a preview of the second review-->
            <TextView
                android:id="@+id/tv_review2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:ellipsize="end"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_review2_heading"/>

            <!--A hint for the user to view the full review-->
            <TextView
                android:id="@+id/tv_review2_click_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/movie_details_header_review_read_more"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_review2"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>